--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # PostgreSQL Connection Settings
+server.port=9095
 spring.datasource.url=jdbc:postgresql://localhost:5432/validator_db
-spring.datasource.username=psotgres
+spring.datasource.username=postgres
 spring.datasource.password=123456
 
 # JPA Settings
